set taxonomies pr

--- a/app/views/static/api/docs/interface/taxonomizableinterface/index.html
+++ b/app/views/static/api/docs/interface/taxonomizableinterface/index.html
@@ -5,6 +5,8 @@
 <a id="implemented-by" class="anchor" href="#implemented-by" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Implemented by</h2>
 <ul>
    <li><code><a href="/api/docs/object/assembly">Assembly</a></code></li>
+   <li><code><a href="/api/docs/object/conference">Conference</a></code></li>
+   <li><code><a href="/api/docs/object/meeting">Meeting</a></code></li>
    <li><code><a href="/api/docs/object/participatoryprocess">ParticipatoryProcess</a></code></li>
    <li><code><a href="/api/docs/object/proposal">Proposal</a></code></li>
 </ul>
