--- a/app/views/static/api/docs/object/conference/index.html
+++ b/app/views/static/api/docs/object/conference/index.html
@@ -8,6 +8,7 @@
    <li><code><a href="/api/docs/interface/categoriescontainerinterface">CategoriesContainerInterface</a></code></li>
    <li><code><a href="/api/docs/interface/participatoryspaceinterface">ParticipatorySpaceInterface</a></code></li>
    <li><code><a href="/api/docs/interface/scopableinterface">ScopableInterface</a></code></li>
+   <li><code><a href="/api/docs/interface/taxonomizableinterface">TaxonomizableInterface</a></code></li>
 </ul>
 <h2>
 <a id="fields" class="anchor" href="#fields" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Fields</h2>
@@ -179,6 +180,12 @@
   </tr>
   </tbody>
 </table>
+  </div>
+</div>
+<div class="field-entry ">
+  <span id="taxonomies" class="field-name anchored">taxonomies (<code><a href="/api/docs/object/taxonomy">[Taxonomy!]</a></code>)</span>
+  <div class="description-wrapper">
+   <p>The object's taxonomies</p>
   </div>
 </div>
 <div class="field-entry ">
