--- a/app/views/static/api/docs/object/meeting/index.html
+++ b/app/views/static/api/docs/object/meeting/index.html
@@ -6,12 +6,11 @@
 <ul>
    <li><code><a href="/api/docs/interface/attachableinterface">AttachableInterface</a></code></li>
    <li><code><a href="/api/docs/interface/authorableinterface">AuthorableInterface</a></code></li>
-   <li><code><a href="/api/docs/interface/categorizableinterface">CategorizableInterface</a></code></li>
    <li><code><a href="/api/docs/interface/commentableinterface">CommentableInterface</a></code></li>
    <li><code><a href="/api/docs/interface/meetingslinkedresourcesinterface">MeetingsLinkedResourcesInterface</a></code></li>
    <li><code><a href="/api/docs/interface/questionnaireentityinterface">QuestionnaireEntityInterface</a></code></li>
-   <li><code><a href="/api/docs/interface/scopableinterface">ScopableInterface</a></code></li>
    <li><code><a href="/api/docs/interface/servicesinterface">ServicesInterface</a></code></li>
+   <li><code><a href="/api/docs/interface/taxonomizableinterface">TaxonomizableInterface</a></code></li>
    <li><code><a href="/api/docs/interface/timestampsinterface">TimestampsInterface</a></code></li>
 </ul>
 <h2>
@@ -233,15 +232,9 @@
   </div>
 </div>
 <div class="field-entry ">
-  <span id="scope" class="field-name anchored">scope (<code><a href="/api/docs/object/scope">Scope</a></code>)</span>
+  <span id="taxonomies" class="field-name anchored">taxonomies (<code><a href="/api/docs/object/taxonomy">[Taxonomy!]</a></code>)</span>
   <div class="description-wrapper">
-   <p>The object's scope</p>
-  </div>
-</div>
-<div class="field-entry ">
-  <span id="category" class="field-name anchored">category (<code><a href="/api/docs/object/category">Category</a></code>)</span>
-  <div class="description-wrapper">
-   <p>The object's category</p>
+   <p>The object's taxonomies</p>
   </div>
 </div>
 <div class="field-entry ">
